# pythonProject

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
blog/: models.py  repository.py  urls.py
blog/auth/: token.py  validate_token.py
blog/migrations/: 0001_initial.py  0002_comment.py
blog/routers/: auth.py  blogs.py
blog/schemas/: common.py  requests.py  responses.py
core/: settings.py  urls.py
